--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
         <title>Welcome to WD19P Class</title>
     </head>
     <body>
-        <h1>KodeGo Full Stack Development CLass</h1>
+        <h1>KodeGo Full Stack Web Development Class</h1>
+        <h2>Exercises and Assignments So Far:</h2>
         <p>
-            The Best!
+            <ul>
+                <li>Exercise 1-<a href="https://codenimus.github.io/kodego-demo/exercise1-paragraphscomments">Paragraphs and Comments Exercise</a></li>
+                <li>Exercise 2-<a href="https://codenimus.github.io/kodego-demo/exercise2-linesbreaksprofilepage">Lines and Breaks Profile Page</a></li>
+                <li>Exercise 3-<a href="https://codenimus.github.io/kodego-demo/exercise3-textformatting">Text Formatting</a></li>
+                <li>Exercise 4-<a href="https://codenimus.github.io/kodego-demo/exercise4-preandcodetags">Pre and Code Tags</a></li>
+                <li>Exercise 5-<a href="https://codenimus.github.io/kodego-demo/exercise5-resumehtmlpage">Sample Resume HTML Page</a></li>
+            </ul>
         </p>
     </body>
 </html>
