added items in list

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>KodeGo Full Stack Web Development Class</h1>
-        <h2>Exercises and Assignments So Far:</h2>
+        <h2>Exercises and Assignments Thus Far:</h2>
         <p>
             <ul>
                 <li>Exercise 1-<a href="https://codenimus.github.io/kodego-demo/exercise1-paragraphscomments">Paragraphs and Comments Exercise</a></li>
@@ -13,6 +13,13 @@
                 <li>Exercise 3-<a href="https://codenimus.github.io/kodego-demo/exercise3-textformatting">Text Formatting</a></li>
                 <li>Exercise 4-<a href="https://codenimus.github.io/kodego-demo/exercise4-preandcodetags">Pre and Code Tags</a></li>
                 <li>Exercise 5-<a href="https://codenimus.github.io/kodego-demo/exercise5-resumehtmlpage">Sample Resume HTML Page</a></li>
+                <li>Exercise 6-<a href="https://codenimus.github.io/kodego-demo/iframeexercise1">Embedding Media Using iframe</a></li>
+                <li>Exercise 7-<a href="https://codenimus.github.io/kodego-demo/tablesexercise1">Tables</a></li>
+            </ul>
+        </p>
+        <p>
+            <ul>
+                <li> Assignment 1-Under <a href="https://codenimus.github.io/kodego-demo/canvasassignment1"><i>Getting Started with Visual Studio</i></a> (Introduction to Web Development)</li>
             </ul>
         </p>
     </body>
