added Go Back to Index Page Link

--- a/exercise1-paragraphscomments.html
+++ b/exercise1-paragraphscomments.html
@@ -18,5 +18,8 @@
             <p>
                 This is brought to you by KodeGo Bootcamp
             </p>
+            <p align="center">
+                Go Back to <a href="https://codenimus.github.io/kodego-demo/"><strong>Index Page</strong></a>
+            </p>
     </body>
 </html>
