added Go Back to Index Page link

--- a/exercise2-linesbreaksprofilepage.html
+++ b/exercise2-linesbreaksprofilepage.html
@@ -30,5 +30,8 @@
     <hr>
         <p>
             Reach me at dahtienz@gmail.com
-        </p>  
+        </p>
+        <p align="center">
+            Go Back to <a href="https://codenimus.github.io/kodego-demo/"><strong>Index Page</strong></a>
+        </p>
     </body>
