added Go Back to Index Page link

--- a/exercise4-preandcodetags.html
+++ b/exercise4-preandcodetags.html
@@ -16,12 +16,12 @@
             <hr>
             <pre>
 
-                            B - This is Perfectly alligned between the lines.
+                            B - This is Perfectly aligned between the lines.
             </pre>
             <hr>
             <pre>
 
-                            C - This is Perfectly alligend between the lines.
+                            C - This is Perfectly aligned between the lines.
             </pre>
             <hr>
         </p>
@@ -36,6 +36,9 @@ function printValues($a) : string{
 }
                 </pre>
             </code>
+        </p>
+        <p align="center">
+            Go Back to <a href="https://codenimus.github.io/kodego-demo/"><strong>Index Page</strong></a>
         </p>
     </body>
 </html>
