added Go Back to Index Page

--- a/exercise5-resumehtmlpage.html
+++ b/exercise5-resumehtmlpage.html
@@ -36,5 +36,8 @@
                     </ul>
             </ol>
         </p>
+        <p align="center">
+            Go Back to <a href="https://codenimus.github.io/kodego-demo/"><strong>Index Page</strong></a>
+        </p>
     </body>
 </html>
