added Go Back to Index Page link

--- a/iframeexercise1.html
+++ b/iframeexercise1.html
@@ -30,5 +30,8 @@
             Click <a href="https://heartytongue.com/recipe/cassava-kamoteng-kahoy-maruya/"><strong><i>HERE</i></strong></a>
             for more details.
         </p>
+        <p align="center">
+            Go Back to <a href="https://codenimus.github.io/kodego-demo/"><strong>Index Page</strong></a>
+        </p>
     </body>
 </html>
