added Go Back to Index Page link

--- a/tablesexercise1.html
+++ b/tablesexercise1.html
@@ -48,5 +48,8 @@
                 <td colspan="4">Stats Powered By <u><font color="blue">KodeGo</font></u></td>
             </tr>
         </table>
+        <p align="center">
+            Go Back to <a href="https://codenimus.github.io/kodego-demo/"><strong>Index Page</strong></a>
+        </p>
     </body>
 </html>
