added Go Back to Index Page link

--- a/canvasassignment1.html
+++ b/canvasassignment1.html
@@ -21,6 +21,8 @@
     <textarea>Textarea content here</textarea>
     <input type='submit' value='Send' />
 </form>
-
+<p align="center">
+    Go Back to <a href="https://codenimus.github.io/kodego-demo/"><strong>Index Page</strong></a>
+</p>
 </body>
 </html>
