reduced cellpadding, width, realigned Go Back link

--- a/tablesexercise1.html
+++ b/tablesexercise1.html
@@ -6,8 +6,8 @@
     <body>
         <h1>Basketball Player Roster</h1>
         <h2>Players</h2>
-        <table border="1"; cellspacing="2"; cellpadding="20";
-        width="80%">
+        <table border="1"; cellspacing="2"; cellpadding="10";
+        width="50%">
             <tr align="center">
                 <td>Jersey Number</td>
                 <td>Player Name</td>
@@ -48,7 +48,7 @@
                 <td colspan="4">Stats Powered By <u><font color="blue">KodeGo</font></u></td>
             </tr>
         </table>
-        <p align="center">
+        <p align="left">
             Go Back to <a href="https://codenimus.github.io/kodego-demo/"><strong>Index Page</strong></a>
         </p>
     </body>
