added name in h2 tag

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>KodeGo Full Stack Web Development Class</h1>
-        <h2>Exercises and Assignments Thus Far:</h2>
+        <h2><i>Dhel Atienza's</i> Exercises and Assignments Thus Far:</h2>
         <p>
             <ul>
                 <li>Exercise 1-<a href="https://codenimus.github.io/kodego-demo/exercise1-paragraphscomments">Paragraphs and Comments Exercise</a></li>
