--- a/tablesexercise1.html
+++ b/tablesexercise1.html
@@ -6,48 +6,53 @@
     <body>
         <h1>Basketball Player Roster</h1>
         <h2>Players</h2>
-        <table border="1"; cellspacing="2"; cellpadding="10";
-        width="50%">
-            <tr align="center">
-                <td>Jersey Number</td>
-                <td>Player Name</td>
-                <td>Position</td>
-                <td>Avg Field Goal %</td>
-            </tr>
-            <tr>
-                <td>12</td>
-                <td>Player One</td>
-                <td>Guard</td>
-                <td align="center">15%</td>
-            </tr>
-            <tr>
-                <td>17</td>
-                <td>Player Two</td>
-                <td>Forward</td>
-                <td align="center">25%</td>
-            </tr>
-            <tr>
-                <td>24</td>
-                <td>Player Three</td>
-                <td>Center</td>
-                <td align="center">45%</td>
-            </tr>
-            <tr>
-                <td>23</td>
-                <td>Player Four</td>
-                <td>Shooting Guard</td>
-                <td align="center">35%</td>
-            </tr>
-            <tr>
-                <td>10</td>
-                <td>Player Five</td>
-                <td>Small Forward</td>
-                <td align="center">28%</td>
-            </tr>
-            <tr align="center">
-                <td colspan="4">Stats Powered By <u><font color="blue">KodeGo</font></u></td>
-            </tr>
+        <section>
+            <table border="1"; cellspacing="2"; cellpadding="10";
+            width="50%">
+            <thead>
+                <tr align="center">
+                    <th>Jersey Number</th>
+                    <th>Player Name</th>
+                    <th>Position</th>
+                    <th>Avg Field Goal %</th>
+                </tr>
+                <tbody>
+                    <tr>
+                        <td>12</td>
+                        <td>Player One</td>
+                        <td>Guard</td>
+                        <td align="center">15%</td>
+                    </tr>
+                    <tr>
+                        <td>17</td>
+                        <td>Player Two</td>
+                        <td>Forward</td>
+                        <td align="center">25%</td>
+                    </tr>
+                    <tr>
+                        <td>24</td>
+                        <td>Player Three</td>
+                        <td>Center</td>
+                        <td align="center">45%</td>
+                    </tr>
+                    <tr>
+                        <td>23</td>
+                        <td>Player Four</td>
+                        <td>Shooting Guard</td>
+                        <td align="center">35%</td>
+                    </tr>
+                    <tr>
+                        <td>10</td>
+                        <td>Player Five</td>
+                        td>Small Forward</td>
+                        <td align="center">28%</td>
+                    </tr>
+                    <tr align="center">
+                        <td colspan="4">Stats Powered By <u><font color="blue">KodeGo</font></u></td>
+                    </tr>
+                </tbody>
         </table>
+        </section>
         <p align="left">
             Go Back to <a href="https://codenimus.github.io/kodego-demo/"><strong>Index Page</strong></a>
         </p>
