added thead closing tag

--- a/tablesexercise1.html
+++ b/tablesexercise1.html
@@ -16,6 +16,7 @@
                     <th>Position</th>
                     <th>Avg Field Goal %</th>
                 </tr>
+            </thead>
                 <tbody>
                     <tr>
                         <td>12</td>
