--- a/tablesexercise1.html
+++ b/tablesexercise1.html
@@ -17,41 +17,41 @@
                     <th>Avg Field Goal %</th>
                 </tr>
             </thead>
-                <tbody>
-                    <tr>
-                        <td>12</td>
-                        <td>Player One</td>
-                        <td>Guard</td>
-                        <td align="center">15%</td>
-                    </tr>
-                    <tr>
-                        <td>17</td>
-                        <td>Player Two</td>
-                        <td>Forward</td>
-                        <td align="center">25%</td>
-                    </tr>
-                    <tr>
-                        <td>24</td>
-                        <td>Player Three</td>
-                        <td>Center</td>
-                        <td align="center">45%</td>
-                    </tr>
-                    <tr>
-                        <td>23</td>
-                        <td>Player Four</td>
-                        <td>Shooting Guard</td>
-                        <td align="center">35%</td>
-                    </tr>
-                    <tr>
-                        <td>10</td>
-                        <td>Player Five</td>
-                        td>Small Forward</td>
-                        <td align="center">28%</td>
-                    </tr>
-                    <tr align="center">
-                        <td colspan="4">Stats Powered By <u><font color="blue">KodeGo</font></u></td>
-                    </tr>
-                </tbody>
+            <tbody>
+                <tr>
+                    <td>12</td>
+                    <td>Player One</td>
+                    <td>Guard</td>
+                    <td align="center">15%</td>
+                </tr>
+                <tr>
+                    <td>17</td>
+                    <td>Player Two</td>
+                    <td>Forward</td>
+                    <td align="center">25%</td>
+                </tr>
+                <tr>
+                    <td>24</td>
+                    <td>Player Three</td>
+                    <td>Center</td>
+                    <td align="center">45%</td>
+                </tr>
+                <tr>
+                    <td>23</td>
+                    <td>Player Four</td>
+                    <td>Shooting Guard</td>
+                    <td align="center">35%</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td>Player Five</td>
+                    <td>Small Forward</td>
+                    <td align="center">28%</td>
+                </tr>
+                <tr align="center">
+                    <td colspan="4">Stats Powered By <u><font color="blue">KodeGo</font></u></td>
+                </tr>
+            </tbody>
         </table>
         </section>
         <p align="left">
