--- a/iframeexercise1.html
+++ b/iframeexercise1.html
@@ -4,34 +4,45 @@
         <title>Embedding Videos from other Sites</title>
     </head>
     <body>
-        <h1>The Cassava Maruya Recipe</h1>
+        <h1>Media Content</h1>
+        <hr>
+        <h2>Famished?</h2>
         <p>
-            Here is another recipe that anyone can enjoy for breakfasts or snacks, the Cassava or Kamoteng Kahoy Maruya.
-            One of the many Filipino foodstuffs that are easy to prepare with simple ingredients.
-            Share and savour with the family, or sell it for extra income.
+            After a long hard day, you might end up being hungry.
         </p>
+        <p>You came home but there is no food on the table. A relief came to mind! There's still something in the kitchen that you can rustle up!
+        <p>
+            Lo and behold! You forgot that you can't cook! It's AGONIZING! I know the feeling.
+        </p>
+        <p>
+            Good thing I have something to ease up your misseries... BUT, you better stop slacking! 
+        </p>
+        <p>    
+            <strong>Start your cooking journey by following these recipe videos.</strong>
+        </p>
+        <article>
+            <div>
+                <iframe width="400" height="320" src="https://www.youtube.com/embed/QF3uOJchgUQ"
+                title="Cassava Maruya Recipe" frameborder="0" allow="accelerometer; autoplay;
+                clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
 
-        <iframe width="1029" height="579" src="https://www.youtube.com/embed/QF3uOJchgUQ"
-        title="Cassava Maruya Recipe" frameborder="0" allow="accelerometer; autoplay;
-        clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-        </iframe>
-
-        <h2>Ingredients:</h2>
+                <iframe width="400" height="320" src="https://www.youtube.com/embed/g7NLlbOEwRs"
+                title="Easy Maruya Recipe with Saging na Saba" frameborder="0" allow="accelerometer;
+                autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            
+                <iframe width="400" height="320" src="https://www.youtube.com/embed/RcaCL7z5jas"
+                title="Easy Fried Rice With Egg" frameborder="0" allow="accelerometer; autoplay;
+                clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </article>
         <p>
-            <ul type="square">
-                <li>2kg grated cassava, aka Kamoteng Kahoy</li>
-                <li>1cup sugar - as for this recipe, we used the Segunda sugar (for those who do not know, it is like a mixture of brown and white sugar combined</li>
-                <li>1/2 cup of evaporated milk</li>
-                <li>1/2 teaspoon vanilla</li>
-                <li>Margarine for cooking the cassava Maruya recipe</li>
-            </ul>
+            Click <a href="https://heartytongue.com/recipe/"><strong><i>HERE</i></strong></a>
+            for more downloadable recipes.
         </p>
-        <p>
-            Click <a href="https://heartytongue.com/recipe/cassava-kamoteng-kahoy-maruya/"><strong><i>HERE</i></strong></a>
-            for more details.
-        </p>
+            <hr>
         <p align="center">
             Go Back to <a href="https://codenimus.github.io/kodego-demo/"><strong>Index Page</strong></a>
-        </p>
+         </p>
     </body>
 </html>
