--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li>Exercise 5-<a href="https://codenimus.github.io/kodego-demo/exercise5-resumehtmlpage">Sample Resume HTML Page</a></li>
                 <li>Exercise 6-<a href="https://codenimus.github.io/kodego-demo/iframeexercise1">Embedding Media Using iframe</a></li>
                 <li>Exercise 7-<a href="https://codenimus.github.io/kodego-demo/tablesexercise1">Tables</a></li>
+                <li>Exercise 9-<a href="https://codenimus.github.io/kodego-demo/exercise9-htmlform">HTML Form</a></li>
             </ul>
         </p>
     </body>
