--- a/exercise9-htmlform.html
+++ b/exercise9-htmlform.html
@@ -89,5 +89,9 @@
             </section>
         </form>
     </main>
+    <hr>
+        <p align="center">
+            Go Back to <a href="https://codenimus.github.io/kodego-demo/"><strong>Index Page</strong></a>
+         </p>
 </body>
 </html>
