--- a/exercise8.html
+++ b/exercise8.html
@@ -17,7 +17,7 @@
         <li>Exercise 5-<a href="https://codenimus.github.io/kodego-demo/exercise5-resumehtmlpage" target="iframe_a">Sample Resume HTML Page</a></li>
         <li>Exercise 6-<a href="https://codenimus.github.io/kodego-demo/iframeexercise1" target="iframe_a">Embedding Media Using iframe</a></li>
         <li>Exercise 7-<a href="https://codenimus.github.io/kodego-demo/tablesexercise1" target="iframe_a">Tables</a></li>
-        <li>Exercise 8-<a href="" target="iframe_a"></a>Webpage within a Webpage Using iframes</li>
+        <li>Exercise 8-<a href="https://codenimus.github.io/kodego-demo/exercise8.html" target="iframe_a"></a>Webpage within a Webpage Using iframes</li>
         <li>Exercise 9-<a href="https://codenimus.github.io/kodego-demo/exercise9-htmlform" target="iframe_a">HTML Form</a></li>
     </ul>
   </section>
