--- a/exercise8.html
+++ b/exercise8.html
@@ -21,6 +21,10 @@
         <li>Exercise 9-<a href="https://codenimus.github.io/kodego-demo/exercise9-htmlform" target="iframe_a">HTML Form</a></li>
     </ul>
   </section>
+      <hr>
+  <p align="center">
+    Go Back to <a href="https://codenimus.github.io/kodego-demo/"><strong>Index Page</strong></a>
+ </p>
 
   <iframe src="https://codenimus.github.io/kodego-demo/" name="iframe_a"
         title="iframe Exercise 8" height="500px" width="100%"></iframe>
