--- a/cssexercise1.html
+++ b/cssexercise1.html
@@ -11,6 +11,11 @@
             text-transform: uppercase;
             text-shadow: 2px 2px turquoise;
         }
+
+		img {
+			max-width:65%;
+            height:auto;
+		}
         
         h2 {
             padding-top: 40px;
@@ -44,7 +49,7 @@
 				<h2>Learning CSS3 selectors - "The basics"
 				</h2>
 				<div>
-					<img src="https://images.pexels.com/photos/270404/pexels-photo-270404.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+					<img src="https://images.pexels.com/photos/270404/pexels-photo-270404.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="css-code-screen">
 				</div>
 				<p>
 					To apply CSS to an element you need to select it. CSS provides you with a number of different ways to do this, and you can explore them in this module.
