modified cssexercise and index

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li>Exercise 7-<a href="https://codenimus.github.io/kodego-demo/tablesexercise1">Tables</a></li>
                 <li>Exercise 8-<a href="https://codenimus.github.io/kodego-demo/exercise8">Webpage within a Webpage Using iframes</a></li>
                 <li>Exercise 9-<a href="https://codenimus.github.io/kodego-demo/exercise9-htmlform">HTML Form</a></li>
+                <li>Exercise 10-<a href="https://codenimus.github.io/kodego-demo/cssexercise1">CSS Exercise 1</a></li>
             </ul>
         </p>
     </body>
