--- a/cssexercise1.html
+++ b/cssexercise1.html
@@ -21,10 +21,14 @@
         
         h2 {
             padding-top: 40px;
+			text-transform: uppercase;
+            text-shadow: 1px 1px turquoise;
         }
 
         h3 {
             padding-top: 20px;
+			text-transform: uppercase;
+            text-shadow: 1px 1px turquoise;
         }
 
 		body { 
