--- a/exercise8.html
+++ b/exercise8.html
@@ -19,6 +19,7 @@
         <li>Exercise 7-<a href="https://codenimus.github.io/kodego-demo/tablesexercise1" target="iframe_a">Tables</a></li>
         <li>Exercise 8-<a href="https://codenimus.github.io/kodego-demo/exercise8.html" target="iframe_a"></a>Webpage within a Webpage Using iframes</li>
         <li>Exercise 9-<a href="https://codenimus.github.io/kodego-demo/exercise9-htmlform" target="iframe_a">HTML Form</a></li>
+        <li>Exercise 10-<a href="https://codenimus.github.io/kodego-demo/cssexercise1" target="iframe_a">CSS Exercise 1</a></li>
     </ul>
   </section>
       <hr>
