--- a/cssexercise1.html
+++ b/cssexercise1.html
@@ -36,8 +36,9 @@
 			font-family: 'Montserrat', sans-serif;
 			text-align: center;
 			border: 1px solid green;
-			margin: 25px 50px 75px 100px;
+			margin: 25px 50px 75px 50px;
 			background-color: rgb(155, 209, 155);
+			padding: 5px 10px;
 		}
 
         a:link, a:visited {
