--- a/boxmodel1.html
+++ b/boxmodel1.html
@@ -42,25 +42,23 @@
 				padding-right: 15%;
 			}
 
-
-			body {
+			/* body {
 				position: relative;
   				margin: 0;
   				padding-bottom: 96px;
   				min-height: 100%;
-			}
+			}*/
 
-			.contain {
+			/* .contain {
   				margin: 0 auto;
   				padding-top: 32px;
   				max-width: 640px;
   				width: 94%;
-			}
+			} */
 
 			.aleft {
 				width: 25%;
             	height: 250px;
-            	/* background-color: red; */
 				float: left;
 				text-align: left;
 			}
@@ -68,9 +66,6 @@
 			section {
 				width: 50%;
             	height: 250px;
-            	/* background-color: blue; */
-				/* border-right: 1px solid black;
-				border-left: 1px solid black; */
 				float: left;
 				text-align: justify;
 			}
@@ -78,7 +73,6 @@
 			.aright {
 				width: 25%;
             	height: 250px;
-            	/* background-color: yellow; */
 				float: left;
 			}
 
@@ -92,14 +86,13 @@
   				right: 0;
   				bottom: 0;
   				left: 0;
-  				padding: 16px;
+  				/* padding: 16px; */
   				text-align: center;
 			}
 				
 		</style>
 	</head>
 	<body>
-		<div class="contain">
 		<header>
 			<h1>Viareggio new Pisa (italy), 5 April 1903</h1>
 		</header>
@@ -186,7 +179,6 @@
 					</ul>
 				</div>
 			</aside>
-		</div>
 			<footer>
 				<hr>
 				Copyright &copy;  KodeGo
