--- a/boxmodel1.html
+++ b/boxmodel1.html
@@ -8,88 +8,74 @@
 		<title>Box Model</title>
 		<link rel="stylesheet" href="styles.css">
 		<style>
-			h1 {
-				text-align: center;
-			}
-			nav {
+			body {
+                position: relative;
+                margin-left: 5px;
+                margin-right: 5px;
+            }
+            header {
+                text-align: center;
+            }
+            nav {
+				position: relative;
 				width: 100%;
 				height: 50px;
 				border: none;
-				position: relative;
-				margin: 5px 200px 5px 100px;
 			}
-			.listhome {
-				position: absolute;
-				top: 50%;
-				left: 10%;
-				text-align: left;
-				list-style-type: none;
-				padding-left: 10%;
-			}
-			.listabout {
-				position: absolute;
-				top: 50%;
-				width: 65%;
+            .list1 {
+                position: absolute;
+                top: 50%;
+                left: 27%;
+                text-align: left;
+                list-style-type: none;
+            }
+            .list2 {
+                position: absolute;
+                top: 50%;
+				left: 50%;
 				text-align: center;
 				list-style-type: none;
+            }
+            .list3 {
+                position: absolute;
+                top: 50%;
+                right: 25%;
+                text-align: right;
+                list-style-type: none;  
+            }
+            .aleft {
+                float: left;
+				width: 20%;
+            	height: auto;
 			}
-			.listcontact {
-				position: absolute;
-				top: 50%;
-				right: 25%;
-				text-align: right;
-				list-style-type: none;
-				padding-right: 15%;
+            section {
+                float: left;
+				width: 60%;
+            	height: auto;
+                border-left: 1px solid lightgray;
+                border-right: 1px solid lightgray;
+                padding-left: 10px;
+                padding-right: 10px;
+                padding-bottom: 20px;
+				box-sizing: border-box;
 			}
-
-			/* body {
-				position: relative;
-  				margin: 0;
-  				padding-bottom: 96px;
-  				min-height: 100%;
-			}*/
-
-			/* .contain {
-  				margin: 0 auto;
-  				padding-top: 32px;
-  				max-width: 640px;
-  				width: 94%;
-			} */
-
-			.aleft {
-				width: 25%;
-            	height: 250px;
-				float: left;
-				text-align: left;
+            .aright {
+                float: left;
+				width: 20%;
+            	height: auto;
 			}
-
-			section {
-				width: 50%;
-            	height: 250px;
-				float: left;
-				text-align: justify;
-			}
-
-			.aright {
-				width: 25%;
-            	height: 250px;
-				float: left;
-			}
-
-			img {
-				width: 85%;
+            img {
+				width: 100%;
 				height: auto;
 			}
-
-			footer {
+            footer {
 				position: fixed;
   				right: 0;
   				bottom: 0;
   				left: 0;
-  				/* padding: 16px; */
+                background-color: white;
   				text-align: center;
 			}
-				
 		</style>
 	</head>
 	<body>
@@ -98,9 +84,9 @@
 		</header>
 		<nav>
 			<ul>
-				<li class="listhome"><a href="#">Home</a></li>
-				<li class="listabout"><a href="#">About</a></li>
-				<li class="listcontact"><a href="#">Contact</a></li>
+				<li class="list1"><a href="#">Home</a></li>
+				<li class="list2"><a href="#">About</a></li>
+				<li class="list3"><a href="#">Contact</a></li>
 			</ul>
 		</nav>
 		<hr>
