edited linked img

--- a/boxmodel1.html
+++ b/boxmodel1.html
@@ -92,7 +92,7 @@
 		<hr>
 		<aside class="aleft">
 			<figure>
-				<img src="images/book2jpg.jpg" alt="">
+				<img src="https://erwinmacaraig.github.io/kodego-demo/BoxPrj/img/book2jpg.jpg" alt="">
 				<figcaption>Books</figcaption>
 			</figure>
 			<div>
@@ -153,7 +153,7 @@
 			</section>
 			<aside class="aright">
 				<figure>
-					<img src="images/Kali.jpg" alt="">
+					<img src="https://erwinmacaraig.github.io/kodego-demo/BoxPrj/img/Kali.jpg" alt="">
 					<figcaption>Sports</figcaption>
 				</figure>
 				<div>
