--- a/exercise8.html
+++ b/exercise8.html
@@ -19,8 +19,12 @@
         <li>Exercise 7-<a href="https://codenimus.github.io/kodego-demo/tablesexercise1" target="iframe_a">Tables</a></li>
         <li>Exercise 8-<a href="https://codenimus.github.io/kodego-demo/exercise8.html" target="iframe_a"></a>Webpage within a Webpage Using iframes</li>
         <li>Exercise 9-<a href="https://codenimus.github.io/kodego-demo/exercise9-htmlform" target="iframe_a">HTML Form</a></li>
-        <li>Exercise 10-<a href="https://codenimus.github.io/kodego-demo/cssexercise1" target="iframe_a">CSS Exercise 1</a></li>
     </ul>
+    <ul>
+      <li>CSS Exercise 1-<a href="https://codenimus.github.io/kodego-demo/cssexercise1">HTML Template</a></li>
+      <li>CSS Exercise 2-<a href="https://codenimus.github.io/kodego-demo/boxmodel1">Box Model</a></li>
+      <li>CSS Exercise 3-<a href="https://codenimus.github.io/kodego-demo/positioningexercise1">Positioning Exercise</a></li>
+  </ul>
   </section>
       <hr>
   <p align="center">
