--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
                 <li>Exercise 7-<a href="https://codenimus.github.io/kodego-demo/tablesexercise1">Tables</a></li>
                 <li>Exercise 8-<a href="https://codenimus.github.io/kodego-demo/exercise8">Webpage within a Webpage Using iframes</a></li>
                 <li>Exercise 9-<a href="https://codenimus.github.io/kodego-demo/exercise9-htmlform">HTML Form</a></li>
-                <li>Exercise 10-<a href="https://codenimus.github.io/kodego-demo/cssexercise1">CSS Exercise 1</a></li>
+            </ul>
+            <ul>
+                <li>CSS Exercise 1-<a href="https://codenimus.github.io/kodego-demo/cssexercise1">HTML Template</a></li>
+                <li>CSS Exercise 2-<a href="https://codenimus.github.io/kodego-demo/boxmodel1">Box Model</a></li>
+                <li>CSS Exercise 3-<a href="https://codenimus.github.io/kodego-demo/positioningexercise1">Positioning Exercise</a></li>
             </ul>
         </p>
     </body>
