added css in a links

--- a/positioningexercise1.html
+++ b/positioningexercise1.html
@@ -81,6 +81,15 @@
                 height: 50px;
                 border: none;
             }
+			div > a:link {
+            	background-color: green;
+            	color: white;
+            	border: 1px solid black;
+            	padding: 1px 1px;
+				margin-left: 5px;
+				margin-bottom: 5px;
+				text-decoration: none;
+        	}
         </style>
 
 	</head>
