--- a/positioningexercise1.html
+++ b/positioningexercise1.html
@@ -85,6 +85,7 @@
             	background-color: green;
             	color: white;
             	border: 1px solid black;
+				border-radius: 5px;
             	padding: 1px 1px;
 				margin-left: 5px;
 				margin-bottom: 5px;
