--- a/positioningexercise1.html
+++ b/positioningexercise1.html
@@ -21,7 +21,7 @@
 			p {
 				padding-left: 10px;
 			}
-            .wrapper > a {
+            .wrapper > a:link {
                 background-color: fuchsia;
                 color: white;
                 border: 1px solid black;
