some other edits

--- a/positioningexercise1.html
+++ b/positioningexercise1.html
@@ -21,7 +21,7 @@
 			p {
 				padding-left: 10px;
 			}
-            .wrapper > a:link {
+            .wrapper > a {
                 background-color: fuchsia;
                 color: white;
                 border: 1px solid black;
@@ -81,14 +81,11 @@
                 height: 50px;
                 border: none;
             }
-			div > a:link {
+			div > a {
             	background-color: green;
             	color: white;
             	border: 1px solid black;
-				border-radius: 5px;
             	padding: 1px 1px;
-				margin-left: 5px;
-				margin-bottom: 5px;
 				text-decoration: none;
         	}
         </style>
