--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li>CSS Exercise 1-<a href="https://codenimus.github.io/kodego-demo/cssexercise1">HTML Template</a></li>
                 <li>CSS Exercise 2-<a href="https://codenimus.github.io/kodego-demo/boxmodel1">Box Model</a></li>
                 <li>CSS Exercise 3-<a href="https://codenimus.github.io/kodego-demo/positioningexercise1">Positioning Exercise</a></li>
+                <li>CSS Exercise 4-<a href="https://codenimus.github.io/kodego-demo/mobile">Flexbox and Responsive Design</a></li>
             </ul>
         </p>
     </body>
