--- a/mini-proj1/home.html
+++ b/mini-proj1/home.html
@@ -7,7 +7,7 @@
     <title>Semper Radicata</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Mr+Dafoe&family=UnifrakturCook&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e170880bfe.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="../assets/img/refavicon.png">
+    <link rel="shortcut icon" href="../refavicon.png">
     <link rel="stylesheet" href="../assets/css/refroot-style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
