--- a/mini-proj1/about.html
+++ b/mini-proj1/about.html
@@ -24,6 +24,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               
+              <div class="ps-1 ms-1">
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
@@ -56,6 +57,7 @@
                 </form>
               </div>
             </div>
+            </div>
           </nav>
     </header>
 
@@ -63,12 +65,14 @@
       <div class="container">
       <div class="d-flex justify-content-left align-items-center">
           <div class="text-center h-100">
-            <div class="text-dark">
-              <h1 class="px-3 mb-3 d-flex justify-content-center">OUR MISSION</h1>
+            <div class="mask p-3 m-3" style="background-color: rgba(0, 0, 0, 0.3);">
+            <div class="text-light">
+              <h1 class="px-3 mb-3 d-flex justify-content-center display-2">OUR MISSION</h1>
                 <h2 class="px-3 d-flex justify-content-center">To proclaim, teach and defend
                   <br>the holiness of God in all its fullness
                   <br>to as many people as possible.
                 </h4>
+            </div>
             </div>
           </div>
       </div>
@@ -77,50 +81,46 @@
 
     <section class="container text-center">
       <div class="d-flex justify-content-center align-items-center">
-        <div class="py-3 my-3">
+        <div class="py-5 my-3">
           <h2 class="d-flex justify-content-center fs-5">
             WHAT WE DO
           </h2>
           <p class="d-flex justify-content-center fs-2 fw-bold">
-            Providing ways for Christians to read, study, and converge around God's Truth.
+            Providing ways for Christians to read, study, and converge to become rooted around God's Truth.
           </p>
         </div>
       </div>
     </section>
 
-    <section class="container-fluid py-5">
+    <section class="container-fluid py-3">
       <div class="container">
-      <div class="row row-cols-2 row-cols-md-3 g-4">
-        <div class="col">
-          <div class="card">
-            <img src="https://cdn.pixabay.com/photo/2016/01/26/05/29/type-1161949_960_720.jpg" class="card-img-top" alt="manual-publish">
-            <div class="card-body">
-              <h5 class="card-title">We Publish</h5>
-              <p class="card-text"><span class="fst-italic">God reavealed Himsels in a book</span> (<a href="https://biblia.com/bible/esv/2Ti3.16" target="_blank"><span class="text-success">Tim. 3:16</span></a>). In that sense, reading is an essential part of every Christian's life.
-                For now, we publish online articles with downloadable PDFs so that Christians can grow in their understanding of God and of themselves. We plan to publish physical books as well.</p>
-            </div>
+      <div class="row">
+        <div class="row row-cols-1 row-cols-md-4 g-4 ps-4">
+          <div class="col-lg-4 ps-3">
+              <img src="https://cdn.pixabay.com/photo/2016/01/26/05/29/type-1161949_960_720.jpg" class="card-img-top rounded-pill" alt="manual-publish">
+              <div class="card-body text-center">
+                <h5 class="card-title pt-2">We Publish</h5>
+                <p class="card-text px-3"><span class="fst-italic">God reavealed Himself in a book</span> (<a href="https://biblia.com/bible/esv/Heb1.1" target="_blank"><span class="ref-nav fst-italic">Heb. 1:1</span></a>). In that sense, reading is an essential part of every Christian's life.
+                  For now, we publish online articles with downloadable PDFs so that Christians can grow in their understanding of God and of themselves. We plan to publish physical books as well.</p>
+              </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="https://cdn.pixabay.com/photo/2019/03/19/09/03/studio-4065108_960_720.jpg" class="card-img-top" alt="podcast-set-up">
-            <div class="card-body">
-              <h5 class="card-title">We Broadcast</h5>
-              <p class="card-text"><span class="fst-italic">Faith comes by hearing</span> (<a href="https://biblia.com/bible/esv/Ro10.17" target="_blank"><span class="text-success">Rom. 10:17</span></a>).
-              That makes hearing the word of Christ is essential to our spiritual life. Every week, we air podcasts, video teaching series and more.
-              We're always adding trustworthy and curated teachings from other reformed teachers will soon be available 24/7.</p>
-            </div>
+          <div class="col-lg-4 ps-3">
+              <img src="https://cdn.pixabay.com/photo/2019/03/19/09/03/studio-4065108_960_720.jpg" class="card-img-top rounded-pill" alt="podcast-set-up">
+              <div class="card-body text-center">
+                <h5 class="card-title pt-2">We Broadcast</h5>
+                <p class="card-text px-3"><span class="fst-italic">Faith comes by hearing</span> (<a href="https://biblia.com/bible/esv/Ro10.17" target="_blank"><span class="ref-nav fst-italic">Rom. 10:17</span></a>).
+                  That makes hearing the word of Christ is essential to our spiritual life. Every week, we air podcasts, video teaching series and more.
+                  We're always adding trustworthy and curated teachings from other reformed teachers will soon be available 24/7.</p>
+                </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="https://cdn.pixabay.com/photo/2013/02/14/05/02/new-york-city-81533_960_720.jpg" class="card-img-top" alt="church-congregation">
-            <div class="card-body">
-              <h5 class="card-title">We Gather</h5>
-              <p class="card-text"><span class="fst-italic">Iron sharpens iron</span> (<a href="https://biblia.com/bible/esv/Pr27.17" target="_blank"><span class="text-success">Prov. 27:17</span></a>).
-              Aside from converging online through livestreams, we aim to expand our Christian gatherings at physical events
-              to study God's Word for mutual edification; to bless the local church and strengthen its members for greater service.</p>
-            </div>
+          <div class="col-lg-4 ps-3">
+              <img src="https://cdn.pixabay.com/photo/2013/02/14/05/02/new-york-city-81533_960_720.jpg" class="card-img-top rounded-pill" alt="church-congregation">
+              <div class="card-body text-center">
+                <h5 class="card-title pt-2">We Converge</h5>
+                <p class="card-text px-3"><span class="fst-italic">Iron sharpens iron</span> (<a href="https://biblia.com/bible/esv/Pr27.17" target="_blank"><span class="ref-nav fst-italic">Prov. 27:17</span></a>).
+                  Aside from converging online through livestreams, we aim to expand our Christian gatherings at physical events
+                  to study God's Word for mutual edification; to bless the local church and strengthen its members for greater service.</p>
+                </div>
           </div>
         </div>
       </div>
@@ -172,7 +172,7 @@
       </section>
   
       <section class="pb-2 mb-4">
-        <p>
+        <p class="bg-success p-2 text-dark bg-opacity-10">
           When humanity came to his self-awareness, he started to think about his mere existence.
           <br><em>"<u>What is the Purpose of Life?</u>"</em>, he asked... From that elementary question came all sorts of human philosophies.
           <br>The answer is simple. But let me warn you...
