--- a/mini-proj1/contactus.html
+++ b/mini-proj1/contactus.html
@@ -19,6 +19,13 @@
               <img src="../assets/img/refroots-logo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-center">
               <span class="refroot-title">Semper Radicata</span>
             </a>
+
+            <div>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="./home.html"><span class="text-success me-2"><i class="ref-nav fas fa-home"></i> Home</span></a>
+                  </li>
+                </ul>
       </nav>
 
     <div class="header-content2 d-flex justify-content-center align-items-center">
@@ -89,8 +96,8 @@
           <i class="fab fa-github"></i></a>
       </section>
   
-      <section class="mb-4">
-        <p>
+      <section class="pb-2 mb-4">
+        <p class="bg-success p-2 text-dark bg-opacity-10">
           When humanity came to his self-awareness, he started to think about his mere existence.
           <br><em>"<u>What is the Purpose of Life?</u>"</em>, he asked... From that elementary question came all sorts of human philosophies.
           <br>The answer is simple. But let me warn you...
