--- a/mini-proj1/home.html
+++ b/mini-proj1/home.html
@@ -7,7 +7,7 @@
     <title>Semper Radicata</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Mr+Dafoe&family=UnifrakturCook&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e170880bfe.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="..../assets/img/refavicon.png">
+    <link rel="shortcut icon" href="../assets/img/refavicon.png">
     <link rel="stylesheet" href="../assets/css/refroot-style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
@@ -24,6 +24,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               
+              <div class="ps-1 ms-1">
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
@@ -56,16 +57,17 @@
                 </form>
               </div>
             </div>
+            </div>
           </nav>
         
     <div class="header-content1 d-flex justify-content-center align-items-center">
       <div class="mask" style="background-color: rgba(0, 0, 0, 0.3);">
         <div class="text-center h-100">
-          <div class="text-white">
-            <h1 class="fst-italic px-3 mb-3 d-flex justify-content-center">ALWAYS ROOTED & REFORMING</h1>
+          <div class="text-light">
+            <h1 class="fst-italic display-2 px-3 mb-3 d-flex justify-content-center">ALWAYS ROOTED & REFORMING</h1>
               <h4 class="fst-italic px-3 d-flex justify-content-center">Sola Scriptura / Sola Gratia / Sola Fide <br>Solus Christus / Soli Deo Gloria</h4>
             <div class="mb-3 d-flex justify-content-center">
-            <a class="btn btn-outline-danger btn-lg" href="./christianity212.html" role="button"><b>You've Got to Read More</b></a>
+            <a class="btn btn-outline-success btn-lg" href="./christianity212.html" role="button"><b>You've Got to Read More</b></a>
             </div>
           </div>
         </div>
@@ -76,15 +78,71 @@
   <section class="container text-center">
     <div class="row">
       <div class="col-lg-6 py-5">
-        <p>
-          SA KALIWA DAPAT AKO
-        </p>
+          <div class="row d-flex justify-content-center align-items-center h-100">
+              <figure class="bg-light p-4"
+                style="border-left: .35rem solid #fcdb5e; border-top: 1px solid #eee; border-right: 1px solid #eee; border-bottom: 1px solid #eee;">
+                <i class="fas fa-quote-left fa-2x mb-4" style="color: #fcdb5e;"></i>
+                <blockquote class="blockquote pb-2">
+                  <p>
+                    The stakes are too high for us to build our lives on anything but the solid foundation of God’s Word.
+                    <br>If we want to ground our thinking and our habits in the TRUTH, we must be diligent students of the Bible.
+                  </p>
+                </blockquote>
+                <figcaption class="blockquote-footer mb-0">
+                  R. C. Sproul in <cite title="Source Title">Ligonier Ministries</cite>
+                </figcaption>
+              </figure>
+          </div>
       </div>
         <div class="col align-self-end py-5">
-          <p>
-            KANAN NAMAN AKO, PUNTA ILALIM
-          </p>
+          <div class="row d-flex justify-content-center align-items-center h-100">
+            <img src="https://cdn.pixabay.com/photo/2016/04/05/03/18/prayer-1308663_960_720.jpg" class="rounded-4" alt="praying-with-bible">
+          </div>
         </div>
+    </div>
+  </section>
+
+  <section class="container-fluid text-center bg-secondary bg-opacity-25 py-5">
+    <div class="container">
+      <h3>
+        You know the old axiom when we're talking about something called the Truth:
+      </h3>
+             <h4>We say that <span class="fst-italic ref-nav">"it will set us free!"</h4>
+      <p class="display-5 pb-3">What is the sense of that statement?</p>
+      <p class="display-6">Come! Let's study its origin and know how the Truth really means in the life of True Christians.</p>
+      <div class="mb-3 d-flex justify-content-center">
+        <a class="btn btn-outline-success btn-lg" href="./christianity212.html" role="button"><b>Start Here</b></a>
+        </div>
+    </div>
+
+
+  </section>
+
+  <section class="container text-center">
+    <div class="row">
+      <div class="col align-self-start py-5">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <img src="https://cdn.pixabay.com/photo/2019/06/03/15/31/bible-4249164_960_720.jpg" class="rounded-4" alt="holy-bible">
+        </div>
+      </div>
+      <div class="col-lg-6 py-5">
+          <div class="row d-flex justify-content-center align-items-center h-100">
+              <figure class="bg-light p-4"
+                style="border-right: .35rem solid #fcdb5e; border-top: 1px solid #eee; border-left: 1px solid #eee; border-bottom: 1px solid #eee;">
+                <i class="fas fa-quote-right fa-2x mb-4" style="color: #fcdb5e;"></i>
+                <blockquote class="blockquote pb-2">
+                  <p>
+                    Nothing is more beautiful than the gospel, the good news that God saves sinners through Jesus Christ.
+                    <br><em>Nothing is more damning than a false gospel</em>. The Word of God should constantly be in view!
+                    <br>Know the truth about who God is, who we are, and how we may live with God now and forever.
+                  </p>
+                </blockquote>
+                <figcaption class="blockquote-footer mb-0">
+                  Dr. Joel R. Beeke, president <cite title="Source Title">Puritan Reformed Theological Seminary</cite>
+                </figcaption>
+              </figure>
+          </div>
+      </div>
     </div>
   </section>
 
@@ -133,7 +191,7 @@
       </section>
   
       <section class="pb-2 mb-4">
-        <p>
+        <p class="bg-success p-2 text-dark bg-opacity-10">
           When humanity came to his self-awareness, he started to think about his mere existence.
           <br><em>"<u>What is the Purpose of Life?</u>"</em>, he asked... From that elementary question came all sorts of human philosophies.
           <br>The answer is simple. But let me warn you...
