--- a/mini-proj1/privacy-policy.html
+++ b/mini-proj1/privacy-policy.html
@@ -26,6 +26,8 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               
+              <div class="ps-1 ms-1">
+              <div class="ps-1 ms-1">
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
@@ -57,6 +59,8 @@
                   <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
               </div>
+            </div>
+            </div>
             </div>
           </nav>
     </header>
@@ -157,8 +161,8 @@
 <p>Semper Raticada does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.</p>
 </section>
 
-<footer class="bg-light text-center text-dark">
-  <div class="container-fluid p-4">
+<footer class="text-center text-dark">
+  <div class="bg-light border-top container-fluid pt-2">
     <section class="mb-4">
       <a class="btn btn-outline-success btn-floating m-1" href="https://www.facebook.com/" target="_blank" role="button">
         <i class="fab fa-facebook-f"></i></a>
@@ -176,7 +180,7 @@
         <i class="fab fa-github"></i></a>
     </section>
 
-    <section class="container">
+    <section class="mb-4">
       <form action="">
         <div class="row d-flex justify-content-center">
           <div class="col-auto">
@@ -202,19 +206,19 @@
     </section>
 
     <section class="p-3 d-flex justify-content-center align-items-center">
-        <div>
+      <div>
           <h5 class="text-uppercase">Important Links</h5>
 
           <ul class="list-unstyled mb-0">
             <li>
-              <a href="./terms-conditions.html" class="text-success"><span><i class="fas fa-hand-point-right"></i> Terms and Conditions</span></a>
+              <a href="./terms-conditions.html" class="text-success"><span><i class="fas fa-hand-point-right"></i> Terms & Conditions</span></a></a>
             </li>
             <li class="p-2 nav-item-last">
               <a href="./home.html" class="text-success"><span><i class="fas fa-home"></i> Home</span></a>
             </li>
           </ul>
-        </div>
-    </section>
+      </div>
+      </section>
 
   <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2022 Copyright:
@@ -222,7 +226,6 @@
   </div>
   </div>
 </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
