--- a/mini-proj1/systematic-theology.html
+++ b/mini-proj1/systematic-theology.html
@@ -24,6 +24,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               
+              <div class="ps-1 ms-1">
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
@@ -54,6 +55,7 @@
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
+              </div>
               </div>
             </div>
           </nav>
@@ -104,7 +106,7 @@
       </section>
   
       <section class="pb-2 mb-4">
-        <p>
+        <p class="bg-success p-2 text-dark bg-opacity-10">
           When humanity came to his self-awareness, he started to think about his mere existence.
           <br><em>"<u>What is the Purpose of Life?</u>"</em>, he asked... From that elementary question came all sorts of human philosophies.
           <br>The answer is simple. But let me warn you...
