--- a/mini-proj1/terms-conditions.html
+++ b/mini-proj1/terms-conditions.html
@@ -24,6 +24,8 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               
+              <div class="ps-1 ms-1">
+              <div class="ps-1 ms-1">
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
@@ -55,6 +57,8 @@
                   <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
               </div>
+            </div>
+            </div>
             </div>
           </nav>
     </header>
@@ -185,8 +189,8 @@
 <p>As long as the website and the information and services on the website are provided free of charge, we will not be liable for any loss or damage of any nature.</p>
   </section>
 
-  <footer class="bg-light text-center text-dark">
-    <div class="container-fluid p-4">
+  <footer class="text-center text-dark">
+    <div class="bg-light border-top container-fluid pt-2">
       <section class="mb-4">
         <a class="btn btn-outline-success btn-floating m-1" href="https://www.facebook.com/" target="_blank" role="button">
           <i class="fab fa-facebook-f"></i></a>
@@ -204,7 +208,7 @@
           <i class="fab fa-github"></i></a>
       </section>
   
-      <section class="container">
+      <section class="mb-4">
         <form action="">
           <div class="row d-flex justify-content-center">
             <div class="col-auto">
@@ -230,7 +234,7 @@
       </section>
   
       <section class="p-3 d-flex justify-content-center align-items-center">
-          <div>
+        <div>
             <h5 class="text-uppercase">Important Links</h5>
 
             <ul class="list-unstyled mb-0">
@@ -241,9 +245,9 @@
                 <a href="./home.html" class="text-success"><span><i class="fas fa-home"></i> Home</span></a>
               </li>
             </ul>
-          </div>
-      </section>
-
+        </div>
+        </section>
+  
     <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2022 Copyright:
       <p class="text-dark"><b>SemperRadicata.org</b></p>
